feat(ignis-engine): ciclo de vida do editor no MCP e coordenacao entre agentes
EditorLifecycleTools e ajustes em McpService/McpCoordination/IgnisToolRegistry para agent_join/claims/notes; ScriptManager preserva parent classloader das libs entre recargas e o invalida quando o JAR muda. Regressao coberta em ScriptManagerTest.